# qwsengine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql-analysis.yml
src/: CMakeLists.txt  qwsengine.pc.in  qwsengine_export.h.in  resource.rc.in
src/include/qwsengine/: authmiddleware.h  connection.h  connectionhandler.h  connectionmiddleware.h  handler.h  headerauthconnectionhandler.h  middleware.h  msgauthconnectionhandler.h  msgauthmiddleware.h  qobjecthandler.h  server.h  tokenauthenticator.h
src/src/: authmiddleware.cpp  authmiddleware_p.h  connection.cpp  connection_p.h  connectionhandler.cpp  connectionhandler_p.h  handler.cpp  handler_p.h  headerauthconnectionhandler.cpp  headerauthconnectionhandler_p.h  msgauthconnectionhandler.cpp  msgauthconnectionhandler_p.h  msgauthmiddleware.cpp  msgauthmiddleware_p.h  qobjecthandler.cpp  qobjecthandler_p.h  server.cpp  server_p.h  wslogging.cpp  wslogging_p.h
